--- a/Genma_Tor et le Tor Browser.tex
+++ b/Genma_Tor et le Tor Browser.tex
@@ -194,12 +194,121 @@ Le Tor Browser est une version Extended Support de Firefox, auxquelles sont ajou
 \\$\Rightarrow$ Toutes les versions (dans différentes langues, différents OS) sont disponibles sur le site du projet : 
 \\ \url{https://www.torproject.org/}
 \end{frame}
+
 %----------------------------------------------------------------------------------------
 \begin{frame}
+\frametitle{Télécharger le Tor Browser}
+\begin{center}
+\includegraphics[scale=0.5]{./images/tor2.jpg}
+\end{center}
+\end{frame}
+
+%----------------------------------------------------------------------------------------
+\begin{frame}
+\frametitle{Vérifier le Tor Browser téléchargé}
+Via les clefs GPG, cf. le tuto sur le site de Tor. \\ \url{https://www.torproject.org/docs/verifying-signatures.html}
+\begin{center}
+\includegraphics[scale=0.6]{./images/VerifyingSignatures.jpg}
+\end{center}
+\end{frame}
+
+%----------------------------------------------------------------------------------------
+\begin{frame}
+\frametitle{Installer le Tor Browser}
+
+\justifying{
+Le Tor Browser s'installe comme n'importe quel logiciel Windows, OS X. (voir les tutoriaux si besoin).
+\\
+Pour Ubuntu, GNU/Linux c'est un programme autonome/portable.
+}
+\end{frame}
+
+%----------------------------------------------------------------------------------------
+\begin{frame}
+\frametitle{Lancer le Tor Browser}
 \begin{center}
 \includegraphics[scale=0.3]{./images/tor_browser03.jpg}
 \end{center}
 \end{frame}
+
+%----------------------------------------------------------------------------------------
+\begin{frame}
+\frametitle{Comment être sûr qu'on est bien connecté à Tor?}
+
+\begin{center}
+\url{https://check.torproject.org/}
+\\~\\
+\includegraphics[scale=0.4]{./images/congrats.jpg}
+\end{center}
+\end{frame}
+
+%----------------------------------------------------------------------------------------
+\begin{frame}
+\frametitle{Les nouveautés de la version 4.5 1/2}
+
+\begin{center}
+\includegraphics[scale=0.6]{./images/onionmenu.jpg}
+\end{center}
+
+\begin{block}{Pour la vie privée}
+\begin{itemize}
+ \justifying{
+\item Visualisation et changement de circuit par onglets
+\item Cloisonnement des applications tierces à l'onglet
+\item Moteur de recherche par défaut : Disconnect (fournit des résultats de recherche Google)
+}
+\end{itemize}
+\end{block}
+\end{frame}
+
+%----------------------------------------------------------------------------------------
+\begin{frame}
+\frametitle{Les nouveautés de la version 4.5 2/2}
+\begin{center}
+\includegraphics[scale=0.6]{./images/securityslider}
+\end{center}
+\end{frame}
+
+\begin{frame}
+\frametitle{Les nouveautés de la version 4.5 2/2}
+\begin{block}{Le curseur de sécurité}
+\begin{itemize}
+ \justifying{
+\item Haut - JavaScript est désactivé sur tous les sites par défaut, certains types d’images sont désactivées.
+\item Moyen-Haut - Tous les optimisations de performances JavaScript sont désactivés, certains police fonctionnalités de rendu sont désactivées, JavaScript est désactivé sur tous les non-sites HTTPS par défaut.
+\item  Moyen-Bas - HTML5 audio et vidéo sont en mode click-to-play, quelques optimisations de performances JavaScript sont désactivés, les fichiers JAR à distance sont bloqués et quelques méthodes pour afficher des équations mathématiques sont désactivées.
+\item  Faible (par défaut) - Toutes les fonctions du navigateur sont activés.
+}
+\end{itemize}
+La compatibilité diminue et la sécurité augmente avec chaque niveau de sécurité.
+\end{block}
+\end{frame}
+
+%----------------------------------------------------------------------------------------
+\begin{frame}
+\begin{center}
+\Huge{Maintenir le Tor Browser \\ à jour ? }
+\\~\\ \includegraphics[scale=0.4]{./images/logo_tor.jpg}
+\end{center}
+\end{frame}
+
+%----------------------------------------------------------------------------------------
+\begin{frame}
+\frametitle{Vérifier et installer les mises à jour}
+\begin{center}
+\includegraphics[scale=0.6]{./images/onionmenu.jpg}
+\end{center}
+
+\begin{block}{Depuis un TorBrowser}
+\begin{itemize}
+ \justifying{
+\item Cliquer sur "Vérifier les mises à jour"
+}
+\end{itemize}
+La mise à jour se fait via Tor.
+\end{block}
+\end{frame}
+
 %----------------------------------------------------------------------------------------
 \begin{frame}
 \frametitle{Tor Browser Launcher}
