--- a/Genma_Tor et le Tor Browser.tex
+++ b/Genma_Tor et le Tor Browser.tex
@@ -219,7 +219,9 @@ Via les clefs GPG, cf. le tuto sur le site de Tor. \\ \url{https://www.torprojec
 \justifying{
 Le Tor Browser s'installe comme n'importe quel logiciel Windows, OS X. (voir les tutoriaux si besoin).
 \\
-Pour Ubuntu, GNU/Linux c'est un programme autonome/portable.
+Rq : le Tor Browser délenche une alerte avec la suite Symantec (faux positif). 
+\\
+Pour Ubuntu, GNU/Linux c'est un programme autonome/portable. (On peut aussi l'installer en compilant les sources).
 }
 \end{frame}
 
@@ -341,7 +343,9 @@ Il gère :
 %----------------------------------------------------------------------------------------
 \begin{frame}
 \frametitle{Utiliser Tor - Tails}
-Tails est un système d'exploitation complet basé sur Linux et Debian, en live.
+\justifying{
+Tails (The Amnesic Incognito Live System) est un système d'exploitation complet basé sur Linux et Debian, en live.
+}
 \begin{center}
 \includegraphics[scale=0.3]{./images/tails.jpg}
 \\~\\
