--- a/Genma_Tor et le Tor Browser.tex
+++ b/Genma_Tor et le Tor Browser.tex
@@ -1,7 +1,6 @@
 \documentclass{beamer}
 \mode<presentation> {
-%\usetheme{Madrid}
-%\usetheme{default}
+
 \usepackage{color}
 \definecolor{bottomcolour}{rgb}{0.21,0.11,0.21}
 \definecolor{middlecolour}{rgb}{0.21,0.11,0.21}
@@ -27,13 +26,12 @@
 \usepackage{ragged2e}
 \justifying
 \input{cc_beamer}
-\title[Tor et le Tor Browser Bundle]{Ubuntu Party \\ Le réseau Tor} 
+\title[Tor et le Tor Browser Bundle]{Le réseau Tor} 
 \author{Genma}
+\date{Ubuntu Party - 30-31 mai 2015}
 \begin{document}
-%% Titlepage
 \begin{frame}
 	\titlepage
-	\vfill
 	\begin{center}
 		\includegraphics[scale=0.2]{./images/logo_tor.jpg}
 		\\		
