--- a/Genma_Tor et le Tor Browser.tex
+++ b/Genma_Tor et le Tor Browser.tex
@@ -51,6 +51,13 @@
 \item Le Blog de Genma : http://genma.free.fr
 \item Twitter : http://twitter.com/genma
 \end{itemize}
+\textbf{Mes projets-contributions}
+\\ Plein de choses dont:
+\begin{itemize}
+\item Promotion de Tor
+\item A.I.\up{2} Apprenons l'Informatique, Apprenons Internet
+\end{itemize}
+
 \column{.5\textwidth} 
 \includegraphics[width=5cm,height=5cm]{./images/blog.png} 
 \end{columns}
