--- a/Genma_Tor et le Tor Browser.tex
+++ b/Genma_Tor et le Tor Browser.tex
@@ -156,6 +156,7 @@ une dernière pour le nœud de sortie.
 \end{itemize}
 \justifying{
 $\Rightarrow$ Tor ne chiffre pas après le noeud de sortie.
+\\
 $\Rightarrow$ Il faut utiliser une connexion httpS.
 }
 \end{frame}
@@ -177,7 +178,7 @@ Tor permet aux clients et aux relais d’offrir des services cachés.Il est poss
 \item Tous ces sites ne sont accessibles que via le réseau Tor.
 \item Ils portent une adresse qui se termine par .onion.
 \item Des wikis et moteurs de recherches référencient ces services.
-\item Facebook, Wikipedia, des blogs...
+\item Exemple de sites existants Facebook, Wikipedia, des blogs...
 }
 \end{itemize}
 \end{frame}
@@ -403,9 +404,9 @@ Pour avoir un Tor Browser toujours à jour, on peut installer le Tor Browser Lau
 Il gère : 
 \begin{itemize}
 \justifying{
-\item le téléchargement de la version la plus récente de TBB, dans votre langue et pour votre architecture
-\item la mise à jour automatique (tout en conservant vos signets et préférences) manuel
-\item la vérification de la signature GnuPG du TBB (pour être sûr de l’intégrité des fichiers)
+\item le téléchargement de la version la plus récente de TBB, dans votre langue et pour votre architecture ;
+\item la mise à jour automatique (tout en conservant vos signets et préférences) manuel ;
+\item la vérification de la signature GnuPG du TBB (pour être sûr de l’intégrité des fichiers) ;
 \item ajoute un lanceur d’application "Tor Browser" dans le menu de votre environnement de bureau.
 }
 \end{itemize}
@@ -445,10 +446,10 @@ Vous devrez changer quelques-unes de vos habitudes, et certaines choses ne march
 }
 \begin{itemize}
 \justifying{
-\item Ne faîte pas de Torrent via Tor
-\item N'activez pas et n'installez pas de plugins dans le navigateur
-\item Utiliser la version HTTPS des sites webs
-\item Ne consultez pas/n'ouvrez pas de documents téléchargé pendant que vous êtes connecté via Tor
+\item Ne faîte pas de Torrent via Tor.
+\item N'activez pas et n'installez pas de plugins dans le navigateur.
+\item Utiliser la version HTTPS des sites webs.
+\item Ne consultez pas/n'ouvrez pas de documents téléchargé pendant que vous êtes connecté via Tor.
 }
 \end{itemize}
 \end{frame}
@@ -462,6 +463,8 @@ Vous devrez changer quelques-unes de vos habitudes, et certaines choses ne march
 %---------------------------------------------------------------------------------------
 \begin{frame}
 \frametitle{Soutenir le projet Tor 1/2}
+
+\begin{block}{NosOignons}
 \justifying{
 Il existe l'association NosOignons.net, qui propose des nœuds de sortie Tor financés par la communauté.
 \url{https://nos-oignons.net}
@@ -470,20 +473,33 @@ Il existe l'association NosOignons.net, qui propose des nœuds de sortie Tor fin
 \justifying{
 \item En parler
 \item Faire un don à NosOignons
-\item Devenir membre de la communauté
-\item Faire des tutoriaux, de la traduction, contibuez au code...
 }
 \end{itemize}
-\end{frame}
+\begin{center}
+\includegraphics[scale=0.6]{./images/Dons_nos_oignons.jpg}
+\end{center}
+\end{block}
+ \end{frame}
+%---------------------------------------------------------------------------------------
+\begin{frame}
+\frametitle{Soutenir le projet Tor 2/3}
+\begin{block}{Tor Project}
+\begin{itemize}
+\justifying{
+\item Devenir membre de la communauté Tor, Tails
+\item Contibuez au code...
+\item Faire des tutoriaux, de la traduction...
+}
+\end{itemize}
+\end{block}
+ \end{frame}
 
 %---------------------------------------------------------------------------------------
 \begin{frame}
-\frametitle{Soutenir le projet Tor 2/2}
-
+\frametitle{Soutenir le projet Tor 3/3}
 \begin{center}
 \includegraphics[scale=0.25]{./images/jeu_tor.jpg}
 \end{center}
-
 \end{frame}
 
 %----------------------------------------------------------------------------------------
