--- a/Genma_Tor et le Tor Browser.tex
+++ b/Genma_Tor et le Tor Browser.tex
@@ -150,12 +150,13 @@ $\Rightarrow$ Tor dispose également d'un système de « services cachés » qui
 \begin{itemize}
 \justifying{
 \item Tor fait un routage en oignion avec des couches de chiffrement empilées.
-\item Il y a une première clé de chiffrement vers le nœud d'entrée, une second clé vers le nœud du milieu et
+\item Il y a une première clé de chiffrement pour le nœud d'entrée, une second clé pour le nœud du milieu et
 une dernière pour le nœud de sortie.
+\item La résolution DNS est faite par le noeud de sortie.
 }
 \end{itemize}
 \justifying{
-$\Rightarrow$ Tor ne chiffre pas après le noeud de sortie.
+$\Rightarrow$ Attention : Tor ne chiffre pas après le noeud de sortie.
 \\
 $\Rightarrow$ Il faut utiliser une connexion httpS.
 }
@@ -169,19 +170,56 @@ $\Rightarrow$ Il faut utiliser une connexion httpS.
 \end{frame}
 %----------------------------------------------------------------------------------------
 \begin{frame}
-\frametitle{Tor hidden service - les services cachés de TOR}
+\frametitle{Tor hidden service - les services cachés de TOR 1/3}
 \justifying{
-Tor permet aux clients et aux relais d’offrir des services cachés.Il est possible d'offrir un serveur web, un serveur SSH, etc, sans révéler son adresse IP aux utilisateurs.
+Tor permet aux clients et aux relais d’offrir des services cachés.Il est possible de proposer l'accès à un serveur web, un serveur SSH, etc, sans révéler son adresse IP aux utilisateurs.
 }
 \begin{itemize}
 \justifying{
 \item Tous ces sites ne sont accessibles que via le réseau Tor.
 \item Ils portent une adresse qui se termine par .onion.
 \item Des wikis et moteurs de recherches référencient ces services.
-\item Exemple de sites existants Facebook, Wikipedia, des blogs...
 }
 \end{itemize}
 \end{frame}
+
+%----------------------------------------------------------------------------------------
+\begin{frame}
+\frametitle{Tor hidden service - les services cachés de TOR 2/3}
+
+\begin{block}{Exemple de sites existants ayant une adresse .oinion}
+\begin{itemize}
+ \justifying{
+\item Duckduckgo \url{http://3g2upl4pq6kufc4m.onion}
+\item Facebook : \url{https://facebookcorewwwi.onion}
+\item Le blog de Stéphane Borztmeyer \\ \url{http://7j3ncmar4jm2r3e7.onion}
+\item Techn0polis  d'Amaelle Guiton \\ \url{http://ozawuyxtechnopol.onion}
+}
+\end{itemize}
+\end{block}
+ \justifying{
+$\Rightarrow$ Il existe des annuaires /wiki listant les sites en .oinion
+}
+\end{frame}
+
+%----------------------------------------------------------------------------------------
+\begin{frame}
+\frametitle{Tor hidden service - les services cachés de TOR 3/3}
+
+\begin{block}{Tutoriaux pour mettre en place un .oinion}
+\begin{itemize}
+ \justifying{
+\item Configuring Hidden Services for Tor
+\\ \url{https://www.torproject.org/docs/tor-hidden-service.html.en}
+\item Tor, les .onion, le "darknet" à votre portée par Benjamin Sonntag
+\\ \url{https://benjamin.sonntag.fr/Tor-les-onion-le-darknet-a-votre-portee}
+\item Mon blog dans les oignons par Stéphane Bortzmeyer
+\\ \url{http://www.bortzmeyer.org/blog-tor-onion.html}
+}
+\end{itemize}
+\end{block}
+\end{frame}
+
 
 %----------------------------------------------------------------------------------------
 \begin{frame}
