--- a/Genma_Tor et le Tor Browser.tex
+++ b/Genma_Tor et le Tor Browser.tex
@@ -491,6 +491,31 @@ Vous devrez changer quelques-unes de vos habitudes, et certaines choses ne march
 }
 \end{itemize}
 \end{frame}
+
+%----------------------------------------------------------------------------------------
+\begin{frame}
+\begin{center}
+\Huge{Limites à l'usage de Tor}
+\\~\\ \includegraphics[scale=0.4]{./images/logo_tor.jpg}
+\end{center}
+\end{frame}
+%---------------------
+
+%----------------------------------------------------------------------------------------
+\begin{frame}
+\frametitle{Limites à l'usage de Tor}
+\begin{itemize}
+\justifying{
+\item Pas de flash. Mais les vidéos HTML5 passe.
+\item Il faut activer le javascript (avec parcimonie).
+\item Beaucoup de noeuds de sorties sont bloqués (Cloudfare) etc.
+\item Nécessité de saisir des captchas pour ne pas être assimilé à un bot (et d'activer le javascript).
+\item On ne peut pas créer de compte (Gmail, Twitter...)
+\item On sait qu'on utilise TOR (ou pas, obfuscation).
+}
+\end{itemize}
+\end{frame}
+
 %----------------------------------------------------------------------------------------
 \begin{frame}
 \begin{center}
