--- a/Genma_Tor et le Tor Browser.tex
+++ b/Genma_Tor et le Tor Browser.tex
@@ -516,6 +516,7 @@ Vous devrez changer quelques-unes de vos habitudes, et certaines choses ne march
 \end{itemize}
 \end{frame}
 
+
 %----------------------------------------------------------------------------------------
 \begin{frame}
 \begin{center}
@@ -525,7 +526,7 @@ Vous devrez changer quelques-unes de vos habitudes, et certaines choses ne march
 \end{frame}
 %---------------------------------------------------------------------------------------
 \begin{frame}
-\frametitle{Soutenir le projet Tor 1/2}
+\frametitle{Soutenir le projet Tor 1/4}
 
 \begin{block}{NosOignons}
 \justifying{
@@ -545,7 +546,7 @@ Il existe l'association NosOignons.net, qui propose des nœuds de sortie Tor fin
  \end{frame}
 %---------------------------------------------------------------------------------------
 \begin{frame}
-\frametitle{Soutenir le projet Tor 2/3}
+\frametitle{Soutenir le projet Tor 2/4}
 \begin{block}{Tor Project}
 \begin{itemize}
 \justifying{
@@ -559,10 +560,20 @@ Il existe l'association NosOignons.net, qui propose des nœuds de sortie Tor fin
 
 %---------------------------------------------------------------------------------------
 \begin{frame}
-\frametitle{Soutenir le projet Tor 3/3}
+\frametitle{Soutenir le projet Tor 3/4}
 \begin{center}
 \includegraphics[scale=0.25]{./images/jeu_tor.jpg}
 \end{center}
+\end{frame}
+
+%----------------------------------------------------------------------------------------
+\begin{frame}
+\frametitle{Soutenir le projet Tor 4/4}
+\justifying{
+Si vous utilisez Cloudflare pour protéger votre site, un script permet aux utilisateurs de Tor d'y accéder
+\\ \url{https://github.com/DonnchaC/cloudflare-tor-whitelister}
+\\en ajoutant les relais/noeud de sortie sur une white-liste, permettant aux utilisateur de Tor ne pas avoir à saisir de Captcha.
+}
 \end{frame}
 
 %----------------------------------------------------------------------------------------
